# Prosus-Hackathon

./: .dockerignore  .env.example  .gitignore  AGENT_CONTRACT.md  CLAUDE.md  Dockerfile  README.md  dashboard.html  dashboard.py  docker-compose.yml  pyproject.toml  requirements.txt
.vibe/: plan.md
agents/: __init__.py  _eval_detail.py  _llm_stats.py  _sr_diag.py  compare.py  do_nothing.py  evaluate.py  jfam_agent.py  jfam_core.py  jfam_demo.py  jfam_hybrid.py  jfam_hybridlab.py  jfam_llm.py  jfam_loglens.py  jfam_oodlab.py  jfam_scenariolab.py  jfam_tune.py  llm_manager.py  llm_template.py  my_agent.py  regime_detector.py  runner.py  staffing_fix.py  weekend_safe_agent.py
agents/baseline/: my_agent.py  test_connection.py
agents/prompts/: __init__.py  pricing_prompt.py  satisfaction_prompt.py
agents/team/: __init__.py  agent.py  conflict_resolver.py  forecast.py  helper.py  inventory.py  satisfaction.py
configs/: default.yaml
core/: __init__.py  observation.py  utils.py
data/: restaurant_full.yaml  restaurant_minimal.yaml
data/scenarios/known/: baseline.yaml  health_scare.yaml  inflation.yaml  renovation.yaml  supply_crisis.yaml  tourist_season.yaml
logs/: naive_rule_baseline_42.json  staffing_fix_results.json  weekend_safe_detail.json
scripts/: render_chart.py
src/restbench/: __init__.py  config.py
src/restbench/api/: persistence.py  server.py
src/restbench/core/: observation.py  rng.py  types.py
src/restbench/engine/: cohorts.py  guardrails.py  reputation.py  satisfaction.py  service.py  suppliers.py  tuning.py  world.py
(+5 files in other folders)
