[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "restbench"
version = "0.1.0"
description = "Restaurant simulation benchmark for AI agents"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "pydantic>=2.11,<3",
    "numpy>=2.4,<3",
    "pyyaml>=6.0.3",
    "fastapi>=0.136,<1",
    "uvicorn[standard]>=0.46",
    "httpx>=0.28",
    "litellm>=1.70",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.57",
    "plotly>=6.7",
]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.1",
    "pytest-xdist>=3.8",
    "pytest-asyncio>=0.25",
    "hypothesis>=6.152",
    "ruff>=0.11",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -ra --tb=short"
markers = [
    "slow: marks tests that run full 30-day simulations",
    "determinism: marks deterministic replay tests",
]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
